--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.2.0",
+    "react-csv": "^2.2.2",
     "react-data-export": "^0.4.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
